# CoreMP135_framebuffer_OpenCV

./: CMakeLists.txt  LICENSE  README.md  frame_buffer_opencv  main.cpp
